# chart-review

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  pages.yaml  pypi.yaml
chart_review/: __init__.py  agree.py  cli.py  cli_utils.py  cohort.py  common.py  config.py  console_utils.py  defines.py  errors.py  external.py  kappa.py  labelstudio.py  mentions.py  publish.py  simplify.py  studio.py  term_freq.py  types.py
chart_review/commands/: accuracy.py  default.py  frequency.py  ids.py  info.py  labels.py  labels2sql.py  mcnemar.py  mentions.py
chart_review/covid_symptom/: config.py  config.yaml  paper.py
chart_review/suicide_icd10/: config.py  config.yaml
chartreview/: agree.py  cohort.py  common.py  kappa.py  mentions.py  publish.py  simplify.py
chartreview/covid_symptom/: config.py  paper.py
docs/: README.md  accuracy.md  config.md  frequency.md  ids.md  index.md  info.md  labels.md  mcnemar.md  mentions.md  setup.md
tests/: base.py  test_accuracy.py  test_agree.py  test_cli.py  test_cohort.py  test_config.py  test_external.py  test_frequency.py  test_ids.py  test_info.py  test_labels.py  test_mcnemar.py  test_mentions.py  test_simplify.py  test_studio.py  test_term_freq.py
tests/data/cold/: config.yaml  labelstudio-export.json
tests/data/ignore/: config.yaml  labelstudio-export.json
tests/data/many-notes/: config.yaml  labelstudio-export.json
tests/data/sublabels/: labelstudio-export.json
