[project]
name = "chart-review"
version = "0.0.1"
requires-python = ">= 3.9"
dependencies = [
    "ctakesclient",
    "pyyaml >= 6",
]
description = "Medical Record Chart Review Calculator"
readme = "README.md"
license = { text="Apache License 2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Home = "https://smarthealthit.org/cumulus-a-universal-sidecar-for-a-smart-learning-healthcare-system/"
Documentation = "https://docs.smarthealthit.org/cumulus/"
Source = "https://github.com/smart-on-fhir/chart-review"

[project.scripts]
chart-review = "chart_review.cli:main_cli"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project.optional-dependencies]
tests = [
    "pytest",
]
dev = [
    "black",
    "pylint",
]

[tool.flit.sdist]
include = ["chart_review/"]
