[project]
name = "chart-review"
requires-python = ">= 3.9"
dependencies = [
    "ctakesclient",
    "pyyaml >= 6",
    "rich",
]
description = "Medical Record Chart Review Calculator"
readme = "README.md"
license = { text="Apache License 2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[project.urls]
Home = "https://smarthealthit.org/cumulus-a-universal-sidecar-for-a-smart-learning-healthcare-system/"
Documentation = "https://docs.smarthealthit.org/cumulus/chart-review/"
Source = "https://github.com/smart-on-fhir/chart-review"

[project.scripts]
chart-review = "chart_review.cli:main_cli"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.black]
line-length = 100

[project.optional-dependencies]
tests = [
    "ddt",
    "pytest",
]
dev = [
    "bandit[toml]",
    "black >= 24, < 25",
    "pycodestyle",
    "pylint",
]

[tool.flit.sdist]
include = [
    "docs/",
    "tests/",
    "LICENSE",
    "*.md",
]
