[project]
name = "chart-review"
requires-python = ">= 3.9"
dependencies = [
    "ctakesclient",
    "pyyaml >= 6",
    "rich",
    "scipy",
]
description = "Medical Record Chart Review Calculator"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[project.urls]
Home = "https://smarthealthit.org/cumulus/"
Documentation = "https://docs.smarthealthit.org/cumulus/chart-review/"
Source = "https://github.com/smart-on-fhir/chart-review"

[project.scripts]
chart-review = "chart_review.cli:main_cli"

[build-system]
requires = ["flit_core >=3.12,<4"]
build-backend = "flit_core.buildapi"

[project.optional-dependencies]
tests = [
    "ddt",
    "pytest",
    "pytest-cov",
]
dev = [
    "pre-commit",
    # Ruff is using minor versions for breaking changes until their 1.0 release.
    # See https://docs.astral.sh/ruff/versioning/
    "ruff < 0.13",  # keep in rough sync with pre-commit-config.yaml
]

[tool.flit.sdist]
include = [
    "docs/",
    "tests/",
    "LICENSE",
    "*.md",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
allowed-confusables = ["’", "–"]  # allow proper apostrophes/dashes
select = [
    "A",  # prevent using keywords that clobber python builtins
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "PLE",  # pylint errors
    "RUF",  # the ruff developer's own rules
    "S",  # bandit security warnings
    "UP",  # alert you when better syntax is available in your python version
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]  # init files hold API, so not using imports is intentional
"tests/**" = ["S"]  # tests do suspicious stuff that's fine, actually
